# quantize

./: AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: ci.yml
.grok/skills/explain-concept/: SKILL.md
.grok/skills/release/: SKILL.md
benchmarks/: compare.rs  update_readme.rs
benchmarks/harness/: methods.rs  mod.rs  new.rs  quant.rs  run.rs  sample.rs  stats.rs
chapters/: AGENTS.md  ch01_simple.rs  ch02_naive.rs  ch03_bits.rs  ch04_block.rs  ch05_asymmetric.rs
examples/: compare.rs  update_readme.rs
examples/harness/: metrics.rs  mod.rs  quant.rs  run.rs
src/: asymmetric.rs  bits.rs  block.rs  lib.rs  scale.rs  symmetric.rs
