[package]
name = "quantize"
version = "0.1.0"
edition = "2021"
description = "A simple quantization library."
license = "MIT"
repository = "https://github.com/aksheyd/quantize"
documentation = "https://docs.rs/quantize"
readme = "README.md"
keywords = ["quantization", "ml", "candle", "matmul", "i8"]
categories = ["science", "mathematics"]
authors = ["Akshey Deokule (aksheyd)"]
exclude = [
    "Cargo.lock",
    "Justfile",
    "chapters/",
    "benchmarks/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
half = "2"

[dev-dependencies]
candle-core = "0.9"
rand = "0.8"
