[package]
name = "quantize"
version = "0.1.0"
edition = "2021"
description = "A simple quantization library."
license = "MIT"
repository = "https://github.com/aksheyd/quantize"
documentation = "https://docs.rs/quantize"
readme = "README.md"
keywords = ["quantization", "ml", "candle", "matmul", "i8"]
categories = ["science", "mathematics"]
authors = ["Akshey Deokule (aksheyd)"]
exclude = [
    "Cargo.lock",
    "Justfile",
    "chapters/",
    "benchmarks/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
half = "2"

[dev-dependencies]
candle-core = "0.9"
rand = "0.8"

[[example]]
name = "ch01_simple"
path = "chapters/ch01_simple.rs"

[[example]]
name = "ch02_naive"
path = "chapters/ch02_naive.rs"

[[example]]
name = "ch03_bits"
path = "chapters/ch03_bits.rs"

[[example]]
name = "ch04_block"
path = "chapters/ch04_block.rs"

[[example]]
name = "ch05_asymmetric"
path = "chapters/ch05_asymmetric.rs"

[[example]]
name = "compare"
path = "benchmarks/compare.rs"

[[example]]
name = "update_readme"
path = "benchmarks/update_readme.rs"

